contrast fix

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ Responsive Web Design with HTML5 and CSS third edition by Ben Frain.
 	--blue: #0F1359;
 	--pink: #772667;
 	--white: #F2F2F2;
-	--green: #46A637;
+	--green: rgb(61, 185, 41);
 	--font-size: 1em;
 }
 
